--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:${appCompatVersion}"
     compile "com.android.support:design:${appCompatVersion}"
     compile "com.android.support:recyclerview-v7:${appCompatVersion}"
-    compile "com.android.support:cardview-v7:${appCompatVersion}"
+    compile "com.android.support:recyclerview-v7:${appCompatVersion}"
+    compile "com.android.support:percent:${appCompatVersion}"
     compile "com.android.support:support-annotations:${appCompatVersion}"
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.neykov.mvp-candy:core:1.1.0'
